--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .page {
  min-width: 1100px ;
  max-width: 1600px;
@@ -5,4 +11,193 @@ margin: 0 auto;
 font-family: "Inter", Arial, Helvetica, sans-serif;
 font-size: 16px;
 line-height: 20px;
+color: #000000;
 }
+
+.header {
+  background-color: #ffffff;
+  background-image: url(../images/background_header.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 720px;
+  max-height: 800px;
+
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 80px 0px ;
+}
+
+.nav__links {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  position: absolute;
+  top:30px;
+  right: 80px;
+
+
+}
+
+.nav__link {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #000000;
+  cursor: pointer;
+
+}
+
+
+.nav__logo {
+  width: 105px;
+  height: 39px;
+  position: relative;
+  right: 50px;
+  margin-bottom: 183px;
+}
+
+
+
+.header__image {
+  width: 646px;
+  height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+
+}
+
+.header__title {
+  max-width: 709px;
+  margin-left: 80px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 58px;
+  line-height: 72px;
+  letter-spacing: -1px;
+
+}
+.header__span-accent {
+  display: block;
+  color: #2F80ED;
+  font-family: "Noto Serif", 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 72px;
+}
+
+
+.header__description {
+  max-width: 683px;
+  margin-left: 80px;
+  margin-top: 28px;
+  font-family: "Noto Serif", 'Times New Roman', Times, serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+
+}
+
+
+.header__paragraph {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
+}
+
+.header__paragraph_address {
+  position: absolute;
+  bottom: 40px;
+  right: 80px;
+}
+
+.header__footer {
+
+ position: absolute;
+ bottom: 40px;
+ left: 80px;
+}
+
+.recipes {
+  background-image: url(../images/background_recipes.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #0A2850;
+  color:#ffffff;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+}
+
+.recipes__title {
+margin: 100px 0 24px 80px;
+max-width: 580px;
+ font-family: "Inter", Arial, Helvetica, sans-serif;
+ font-style: normal;
+ font-weight: 500;
+ font-size: 44px;
+ line-height: 52px
+}
+
+.recipes__subtitle {
+
+  margin: 0 0 80px 80px;
+  max-width: 438px;
+  font-family: "Noto Serif", 'Times New Roman', Times, serif;
+ font-style: normal;
+ font-weight: normal;
+ font-size: 20px;
+ line-height: 30px
+
+}
+.recipes__videos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  margin-bottom: 215px;
+}
+
+.recipes__video-caption {
+  margin-top: 24px;
+   font-family: "Inter", Arial, Helvetica, sans-serif;
+ font-style: normal;
+ font-weight: 500;
+ font-size: 20px;
+ line-height: 30px;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+
+}
+
+.recipes__iframe {
+  width: 480px;
+  height: 273px;
+  border: 0;
+}
+
+
