--- a/pages/index.css
+++ b/pages/index.css
@@ -5,13 +5,13 @@
 }
 
 .page {
- min-width: 1100px ;
- max-width: 1600px;
-margin: 0 auto;
-font-family: "Inter", Arial, Helvetica, sans-serif;
-font-size: 16px;
-line-height: 20px;
-color: #000000;
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
 }
 
 .header {
@@ -22,18 +22,20 @@ color: #000000;
   background-position: center;
   min-height: 720px;
   max-height: 800px;
-
+position: relative;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  position: relative;
+  padding: 30px 0 0 80px;
+
 
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
-  padding: 30px 80px 0px ;
+
+
 }
 
 .nav__links {
@@ -41,10 +43,8 @@ color: #000000;
   gap: 20px;
   list-style: none;
   position: absolute;
-  top:30px;
+  top: 30px;
   right: 80px;
-
-
 }
 
 .nav__link {
@@ -56,9 +56,7 @@ color: #000000;
   text-decoration: none;
   color: #000000;
   cursor: pointer;
-
 }
-
 
 .nav__logo {
   width: 105px;
@@ -68,20 +66,17 @@ color: #000000;
   margin-bottom: 183px;
 }
 
-
-
 .header__image {
   width: 646px;
   height: 568px;
   position: absolute;
   top: 124px;
   right: 5px;
-
 }
 
 .header__title {
   max-width: 709px;
-  margin-left: 80px;
+
   margin-top: 0;
   margin-bottom: 0;
   font-family: "Inter", Arial, Helvetica, sans-serif;
@@ -90,31 +85,27 @@ color: #000000;
   font-size: 58px;
   line-height: 72px;
   letter-spacing: -1px;
-
 }
 .header__span-accent {
   display: block;
-  color: #2F80ED;
-  font-family: "Noto Serif", 'Times New Roman', Times, serif;
+  color: #2f80ed;
+  font-family: "Noto Serif", "Times New Roman", Times, serif;
   font-style: italic;
   font-weight: normal;
   font-size: 58px;
   line-height: 72px;
 }
 
-
 .header__description {
   max-width: 683px;
-  margin-left: 80px;
+
   margin-top: 28px;
-  font-family: "Noto Serif", 'Times New Roman', Times, serif;
+  font-family: "Noto Serif", "Times New Roman", Times, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-
 }
-
 
 .header__paragraph {
   font-family: "Inter", Arial, Helvetica, sans-serif;
@@ -132,66 +123,70 @@ color: #000000;
 }
 
 .header__footer {
-
- position: absolute;
- bottom: 40px;
- left: 80px;
+  position: absolute;
+  bottom: 40px;
+  left: 80px;
 }
+
+
 
 .recipes {
   background-image: url(../images/background_recipes.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #0A2850;
-  color:#ffffff;
+  background-color: #0a2850;
+  color: #ffffff;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+  padding:100px 0 215px 80px ;
+
+
+
+
+
+
 
 }
 
 .recipes__title {
-margin: 100px 0 24px 80px;
-max-width: 580px;
- font-family: "Inter", Arial, Helvetica, sans-serif;
- font-style: normal;
- font-weight: 500;
- font-size: 44px;
- line-height: 52px
+
+
+padding-bottom: 24px;
+  max-width: 580px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
 }
 
 .recipes__subtitle {
 
-  margin: 0 0 80px 80px;
   max-width: 438px;
-  font-family: "Noto Serif", 'Times New Roman', Times, serif;
- font-style: normal;
- font-weight: normal;
- font-size: 20px;
- line-height: 30px
-
+  font-family: "Noto Serif", "Times New Roman", Times, serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
 }
 .recipes__videos {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 40px;
-  margin-bottom: 215px;
+ margin-top: 80px;
 }
 
 .recipes__video-caption {
   margin-top: 24px;
-   font-family: "Inter", Arial, Helvetica, sans-serif;
- font-style: normal;
- font-weight: 500;
- font-size: 20px;
- line-height: 30px;
- display: flex;
- justify-content: space-between;
- align-items: center;
-
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .recipes__iframe {
@@ -200,4 +195,120 @@ max-width: 580px;
   border: 0;
 }
 
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  padding: 100px 0 120px 0;
 
+
+
+
+
+}
+.reservation__title {
+  text-align: center;
+  margin-bottom: 80px;
+
+
+
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 50px;
+  line-height: 52px;
+}
+
+.reservation__form {
+margin: 0 auto;
+max-width: 385px;
+
+
+
+
+
+
+}
+
+.fieldset__form {
+
+  border: none;
+  margin: 0;
+  padding:0;
+
+
+
+
+
+
+}
+
+
+
+.form__label {
+
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+}
+.form__input {
+
+  width: 385px;
+  display:block;
+  margin-top: 8px;
+  margin-bottom: 32px;
+  height: 60px;
+  border-color: #838383;
+
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+
+}
+.form__button {
+  height: 60px;
+  margin-bottom: 32px;
+  width: 385px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 4px;
+  background-color: #2f80ed;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.form__button:hover {
+  opacity: 70%;
+}
+
+.form__input::placeholder {
+  padding: 15px 0 0 20px;
+  color: #838383;
+}
+
+.form__checkbox {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+
+}
+
+.form__checkbox-item {
+  width: 20px;
+  height: 20px;
+}
+
+.form__checkbox-item::selection {
+  background-color: #2f80ed;
+  background-image: url(../images/check.svg);
+}
