--- a/pages/index.css
+++ b/pages/index.css
@@ -22,20 +22,16 @@
   background-position: center;
   min-height: 720px;
   max-height: 800px;
-position: relative;
+  position: relative;
   height: 100vh;
   display: flex;
   flex-direction: column;
   padding: 30px 0 0 80px;
-
-
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
-
-
 }
 
 .nav__links {
@@ -128,8 +124,6 @@ position: relative;
   left: 80px;
 }
 
-
-
 .recipes {
   background-image: url(../images/background_recipes.svg);
   background-position: center;
@@ -138,20 +132,11 @@ position: relative;
   background-color: #0a2850;
   color: #ffffff;
   height: 100vh;
-  padding:100px 0 215px 80px ;
-
-
-
-
-
-
-
+  padding: 100px 0 215px 80px;
 }
 
 .recipes__title {
-
-
-padding-bottom: 24px;
+  padding-bottom: 24px;
   max-width: 580px;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -161,7 +146,6 @@ padding-bottom: 24px;
 }
 
 .recipes__subtitle {
-
   max-width: 438px;
   font-family: "Noto Serif", "Times New Roman", Times, serif;
   font-style: normal;
@@ -174,7 +158,7 @@ padding-bottom: 24px;
   align-items: center;
   justify-content: center;
   gap: 40px;
- margin-top: 80px;
+  margin-top: 80px;
 }
 
 .recipes__video-caption {
@@ -203,17 +187,9 @@ padding-bottom: 24px;
   background-size: cover;
   height: 100vh;
   padding: 100px 0 120px 0;
-
-
-
-
-
 }
 .reservation__title {
   text-align: center;
-  margin-bottom: 80px;
-
-
 
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -223,33 +199,17 @@ padding-bottom: 24px;
 }
 
 .reservation__form {
-margin: 0 auto;
-max-width: 385px;
-
-
-
-
-
-
+  margin: 80px auto 0 auto;
+  max-width: 385px;
 }
 
-.form__fieldset{
-
+.form__fieldset {
   border: none;
   margin: 0;
-  padding:0;
-
-
-
-
-
-
+  padding: 0;
 }
 
-
-
 .form__label {
-
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -257,9 +217,8 @@ max-width: 385px;
   line-height: 20px;
 }
 .form__input {
-
   width: 385px;
-  display:block;
+  display: block;
   margin-top: 8px;
   margin-bottom: 32px;
   height: 60px;
@@ -270,7 +229,6 @@ max-width: 385px;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-
 }
 .form__button {
   height: 60px;
@@ -300,7 +258,6 @@ max-width: 385px;
   display: flex;
   justify-content: center;
   gap: 12px;
-
 }
 
 .form__checkbox-item {
