--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,19 @@
-* {
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/header.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/footer.css);
+
+/* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
+} */
 
-.page {
+/* .page {
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
@@ -12,9 +21,9 @@
   font-size: 16px;
   line-height: 20px;
   color: #000000;
-}
+} */
 
-.header {
+/* .header {
   background-color: #ffffff;
   background-image: url(../images/background_header.svg);
   background-size: cover;
@@ -27,39 +36,6 @@
   display: flex;
   flex-direction: column;
   padding: 30px 0 0 80px;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__links {
-  display: flex;
-  gap: 20px;
-  list-style: none;
-  position: absolute;
-  top: 30px;
-  right: 80px;
-}
-
-.nav__link {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
-  text-decoration: none;
-  color: #000000;
-  cursor: pointer;
-}
-
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  position: relative;
-  right: 50px;
-  margin-bottom: 183px;
 }
 
 .header__image {
@@ -122,9 +98,42 @@
   position: absolute;
   bottom: 40px;
   left: 80px;
+} */
+/*
+.nav {
+  display: flex;
+  justify-content: space-between;
 }
 
-.recipes {
+.nav__links {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  position: absolute;
+  top: 30px;
+  right: 80px;
+}
+
+.nav__link {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #000000;
+  cursor: pointer;
+}
+
+.nav__logo {
+  width: 105px;
+  height: 39px;
+  position: relative;
+  right: 50px;
+  margin-bottom: 183px;
+} */
+
+/* .recipes {
   background-image: url(../images/background_recipes.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -177,9 +186,9 @@
   width: 480px;
   height: 273px;
   border: 0;
-}
+} */
 
-.reservation {
+/* .reservation {
   background-color: #d9e7ff;
   background-image: url(../images/background_reservation.svg);
   background-position: center;
@@ -203,7 +212,14 @@
 .reservation__form {
   margin: 0 auto;
   max-width: 385px;
+} */
+
+/* .form {
+  margin: 0;
+  padding: 0;
+
 }
+
 
 .form__fieldset {
   border: none;
@@ -270,4 +286,4 @@
 .form__checkbox-item::selection {
   background-color: #2f80ed;
   background-image: url(../images/check.svg);
-}
+} */
