--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -23,6 +23,11 @@
   cursor: pointer;
 }
 
+.nav__link:hover {
+  color: #2F80ED;
+  transition: 0.5s;
+}
+
 .nav__logo {
   width: 105px;
   height: 39px;
