--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,3 +1,7 @@
+
+* {
+  scroll-behavior: smooth;
+}
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -7,3 +11,4 @@
   line-height: 20px;
   color: #000000;
 }
+
